# wsinfer-mil

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: cli-test-linux.yml  cli-test-macos.yml  cli-test-windows.yml  cli-test.yml  mypy.yml
wsinfer_mil/: __init__.py  __main__.py  cache.py  cli.py  data.py  defaults.py  errors.py  extractors.py  inference.py  output_container.py  quickhash.py  wsi_utils.py
wsinfer_mil/client/: hfmodel.py  localmodel.py  zoo.py
wsinfer_mil/patchlib/: __init__.py  patch.py  segment.py
wsinfer_mil/schemas/: model-config.schema.json  wsinfer-mil-zoo-registry.schema.json
